# uni_projects

./: .gitignore
BILHR/tutorial_3/: TrackedPositions.txt  TrackedPositionsNormalized.txt  XORdata
BILHR/tutorial_5/: CMakeLists.txt  manifest.xml
BILHR/tutorial_5/RLDT/: Q_Learner.h  Q_learner.cpp  RLDT.pro  main.cpp  simulator.cpp  simulator.h
BILHR/tutorial_5/include/: LegPosition.h  Q_Learner.h  TactileTouch.h  cmdLegState.h  leg_node.h
BILHR/tutorial_5/msg/: GoaliePos.msg  LegPosition.msg  cmdLegState.msg
BILHR/tutorial_5/src/: Q_learner.cpp  central_node.cpp  cmac.cpp  cmac.h  ffnn.cpp  ffnn.h  goalie_tracker.cpp  keyboard_node.cpp  leg_node.cpp  move_leg.cpp  robot_config.h
BILHR/tutorial_5/src/BILHR_ros/msg/: _Bumper.py  _GoaliePos.py  _JointAnglesWithSpeed.py  _LegPosition.py  _cmdLegState.py
cognitive_robotics/: camera_parameters.txt  howto_run.txt  system_dependencies.txt
cognitive_robotics/ai_node/: mainpage.dox  manifest.xml  roslib
cognitive_robotics/ball_detection/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/ball_detection2/: ball.py  detector_node.py  find_balls.py  frames.gv  green.pyo  histogram_manual.py  manifest.xml  red.pyo  yellow.pyo
cognitive_robotics/camera/: CMakeLists.txt  camera_parameters.txt  mainpage.dox  manifest.xml
cognitive_robotics/camera/configData/: cam.xml  config.ini
cognitive_robotics/camera/src/: ConfigData.cpp  ConfigData.h  main.cpp
cognitive_robotics/camera/src/camInput/: Cam.cpp  Cam.h  CamGigE.cpp  CamGigE.h  CamOpenCV.cpp
cognitive_robotics/demo_cogsys_cpp/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/demo_cogsys_java/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/dummy_robot_control/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/gripper_control/: CMakeLists.txt  mainpage.dox  manifest.xml  rosdep.yaml
cognitive_robotics/gripper_node/: CMakeLists.txt  manifest.xml
cognitive_robotics/object_detector/: CMakeLists.txt  manifest.xml
cognitive_robotics/object_tracker/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/re_speech_recognition/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/re_tts/: CMakeLists.txt  mainpage.dox  manifest.xml
cognitive_robotics/robot_control/: CMakeLists.txt  manifest.xml
cognitive_robotics/ros_comm_lib/: CMakeLists.txt  Doxyfile.in  mainpage.dox  manifest.xml
cognitive_robotics/ros_comm_lib/include/ros_comm_lib/: CommonDefs.h  RosActionPublisher.h  RosActionSubscriber.h  RosActorsPublisher.h  RosActorsSubscriber.h  RosDeviceStatusPublisher.h  RosDeviceStatusSubscriber.h  RosGripperStatusPublisher.h  RosGripperStatusSubscriber.h  RosImagePublisher.h  RosImageSubscriber.h  RosRobotStatusPublisher.h  RosRobotStatusSubscriber.h  RosTaskStatusPublisher.h  RosTaskStatusSubscriber.h
cognitive_robotics/ros_comm_lib/include/ros_comm_lib/util/: Util.h
cognitive_robotics/ros_comm_lib/src/: RosActionPublisher.cpp  RosActionSubscriber.cpp  RosActorsPublisher.cpp  RosActorsSubscriber.cpp  RosDeviceStatusPublisher.cpp  RosDeviceStatusPublisher.cpp.cpp  RosDeviceStatusSubscriber.cpp  RosGripperStatusPublisher.cpp  RosGripperStatusSubscriber.cpp  RosImagePublisher.cpp  RosImageSubscriber.cpp  RosRobotStatusPublisher.cpp  RosRobotStatusSubscriber.cpp  RosTaskStatusPublisher.cpp  RosTaskStatusSubscriber.cpp
cognitive_robotics/ros_comm_lib/src/util/: Util.cpp
cognitive_systems/src/cogsys_visualization/: CMakeLists.txt  package.xml
cognitive_systems/src/cogsys_visualization/Modules/: FindLibXml2.cmake  FindOde.cmake  FindRtai.cmake
cognitive_systems/src/cogsys_visualization/launch/: cogsys_demonstrator.launch
cognitive_systems/src/cogsys_visualization/models/: baseplate.wrl  boxgreen.wrl  boxred.wrl  cambot.wrl  cambot.xml  cognitionfactory_r0.wrl  cognitionfactory_r0.xml  cogsys_demonstrator.wrl  cogsys_demonstrator.xml  gripperbot.wrl  gripperbot.xml  link1.wrl  link2a.wrl  link2b.wrl  link3.wrl  link4a.wrl  link4b.wrl  link5.wrl  psu.wrl  router.wrl  table.wrl  webcam.wrl  webcam_adapter.wrl  webcam_with_adapter.wrl  whole_gripper.wrl
cognitive_systems/src/cogsys_visualization/src/: ConfigurationModel.cpp  MainWindow.cpp  MainWindow.h  OperationalModel.cpp  SoGradientBackground.cpp  SoGradientBackground.h  rlCoachMdl.cpp
cognitive_systems/src/cogsys_visualization/src/rl/: mainpage.dox
cognitive_systems/src/cogsys_visualization/src/rl/hal/: CMakeLists.txt  Coach.cpp  Coach.h  ComException.h  Comedi.h  Dc1394Camera.cpp  Dc1394Camera.h  DeviceException.h  Endian.cpp  Endian.h  Exception.cpp  Exception.h  Gnuplot.cpp  Jr3.cpp  LeuzeRs4.cpp  LeuzeRs4.h  MitsubishiH7.cpp  MitsubishiH7.h  SchmersalLss300.cpp  SchmersalLss300.h  SchunkFpsF5.cpp  SchunkFpsF5.h  Serial.cpp  Serial.h  SickLms200.cpp  SickLms200.h  SickS300.cpp  Socket.cpp  Socket.h  WeissWsg50.cpp  WeissWsg50.h
cognitive_systems/src/cogsys_visualization/src/rl/math/: Array.h  CMakeLists.txt  Circular.h  Matrix.h  MatrixBaseAddons.h  Quaternion.h  QuaternionBaseAddons.h  Spatial.h  Transform.h  TransformAddons.h  Vector.h
cognitive_systems/src/cogsys_visualization/src/rl/mdl/: Kinematic.cpp  Model.cpp  Model.h  XmlFactory.cpp
cognitive_systems/src/cogsys_visualization/src/rl/sg/: Scene.cpp
cognitive_systems/src/cogsys_visualization/src/rl/util/: CMakeLists.txt  Exception.h  Mutex.h  Process.h  Semaphore.h  Thread.h  Timer.h
cognitive_systems/src/demo_cogsys_cpp/: CMakeLists.txt  package.xml
cognitive_systems/src/demo_cogsys_cpp/src/: main.cpp
cognitive_systems/src/demo_cogsys_cpp_viz/: CMakeLists.txt  package.xml
cognitive_systems/src/demo_cogsys_cpp_viz/src/: main.cpp  main_session4.cpp  main_session4.cpp.autosave
cognitive_systems/src/object_detector/: CMakeLists.txt  package.xml
cognitive_systems/src/object_detector/configData/: config.ini
cognitive_systems/src/object_detector/src/: main.cpp
cognitive_systems/src/object_detector/src/detector/: Detector.cpp  Detector.h  DetectorThread.cpp  DetectorThread.h
roboter_dynamik/: student_license.txt
virtuelle_physik/Exercise 4/: Pin.mo  (+26 more)
(+821 files in other folders)
